--- a/ai_find_data.ipynb
+++ b/ai_find_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJheppkotbZjWFXfvuU2fw",
+      "authorship_tag": "ABX9TyNoO0wWSwUG5RHSQFwqdJ8p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,6 @@
         "groups = [\n",
         "  \"Компьютер\",\n",
         "  \"Велосипед\",\n",
-        "  \"Мобильный телефон\",\n",
         "  \"Книга\",\n",
         "  \"Дом\"\n",
         "]\n",
@@ -93,7 +92,7 @@
         "  \"Видеокарта\",\n",
         "  \"Монитор\",\n",
         "  \"Клавиатура\",\n",
-        "  \"Мышь\",\n",
+        "  \"Компьютерная мышь\",\n",
         "  \"Рама\",\n",
         "  \"Руль\",\n",
         "  \"Седло\",\n",
@@ -102,15 +101,6 @@
         "  \"Переключатели передач\",\n",
         "  \"Тормоза\",\n",
         "  \"Цепь\",\n",
-        "  \"Корпус\",\n",
-        "  \"Экран\",\n",
-        "  \"Процессор\",\n",
-        "  \"Оперативная память\",\n",
-        "  \"Камеры\",\n",
-        "  \"Аккумулятор\",\n",
-        "  \"SIM-карта\",\n",
-        "  \"Динамики\",\n",
-        "  \"Микрофон\",\n",
         "  \"Обложка\",\n",
         "  \"Страницы\",\n",
         "  \"Переплет\",\n",
@@ -139,16 +129,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1bblLBNf3JLW",
-        "outputId": "89169599-7c0a-4de6-abb6-f4e7a7fa8870"
+        "outputId": "fb9213a6-3c33-43e0-fabb-d266747e2760"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Компьютер', 'Велосипед', 'Мобильный телефон', 'Книга', 'Дом']\n",
-            "['Процессор', 'Материнская плата', 'Оперативная память', 'Жесткий диск/SSD', 'Видеокарта', 'Монитор', 'Клавиатура', 'Мышь', 'Рама', 'Руль', 'Седло', 'Колеса', 'Педали', 'Переключатели передач', 'Тормоза', 'Цепь', 'Корпус', 'Экран', 'Процессор', 'Оперативная память', 'Камеры', 'Аккумулятор', 'SIM-карта', 'Динамики', 'Микрофон', 'Обложка', 'Страницы', 'Переплет', 'Текст', 'Иллюстрации', 'Автор', 'Название', 'Издательство', 'Фундамент', 'Стены', 'Крыша', 'Окна', 'Двери', 'Пол', 'Потолок', 'Электрика', 'Сантехника']\n"
+            "['Компьютер', 'Велосипед', 'Книга', 'Дом']\n",
+            "['Процессор', 'Материнская плата', 'Оперативная память', 'Жесткий диск/SSD', 'Видеокарта', 'Монитор', 'Клавиатура', 'Компьютерная мышь', 'Рама', 'Руль', 'Седло', 'Колеса', 'Педали', 'Переключатели передач', 'Тормоза', 'Цепь', 'Обложка', 'Страницы', 'Переплет', 'Текст', 'Иллюстрации', 'Автор', 'Название', 'Издательство', 'Фундамент', 'Стены', 'Крыша', 'Окна', 'Двери', 'Пол', 'Потолок', 'Электрика', 'Сантехника']\n"
           ]
         }
       ]
@@ -166,36 +156,36 @@
       "metadata": {
         "id": "4OG67XO07ws-"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "send_data(f'Дан список с разными деталями: {details}. Найди в данном списке индексы деталей, относящихся к каждой группе из списка групп {groups}. Ответ напиши в виде словаря с ключом в виде группы и значением в виде списка деталей, относящихся к группе. Напиши только результат в виде словаря без комментариев. ')"
+        "send_data(f'Дан список с уникальными деталями: {details}. Найди в данном списке индексы уникальных деталей, относящихся к каждой группе из списка групп {groups}. Ответ напиши в виде словаря с ключом в виде группы и значением в виде списка деталей, относящихся к группе. Напиши только результат в виде словаря без комментариев. ')"
       ],
       "metadata": {
         "id": "3cA4fXdL-uD1",
-        "outputId": "6c42ea1a-2e43-4dc8-880c-557b292df700",
+        "outputId": "d755e14e-b60e-4473-c256-6a1a5b131ddf",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 157
+          "height": 122
         }
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"{'Компьютер': [0, 1, 2, 3, 4, 5, 6, 7, 17, 18, 19], 'Велосипед': [8, 9, 10, 11, 12, 13, 14, 15], 'Мобильный телефон': [16, 18, 19, 20, 21, 22, 23], 'Книга': [24, 25, 26, 27, 28, 29, 30], 'Дом': [31, 32, 33, 34, 35, 36, 37, 38, 39]} \\n\""
+              "\"```python\\n{'Компьютер': [0, 1, 2, 3, 4, 5, 6, 7], 'Велосипед': [8, 9, 10, 11, 12, 13, 14, 15], 'Книга': [16, 17, 18, 19, 20, 21, 22, 23], 'Дом': [24, 25, 26, 27, 28, 29, 30, 31, 32]}\\n```\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -205,37 +195,37 @@
         "import random\n",
         "random.shuffle(details)\n",
         "print(details)\n",
-        "send_data(f'Дан список с разными деталями: {details}. Найди в данном списке индексы деталей, относящихся к каждой группе из списка групп {groups}. Ответ напиши в виде словаря с ключом в виде группы и значением в виде списка деталей, относящихся к группе. Напиши только результат в виде словаря без комментариев. ')"
+        "send_data(f'Дан список с уникальными деталями: {details}. Найди в данном списке индексы уникальных деталей, относящихся к каждой группе из списка групп {groups}. Ответ напиши в виде словаря с ключом в виде группы и значением в виде списка деталей, относящихся к группе. Напиши только результат в виде словаря без комментариев. ')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 194
+          "height": 160
         },
         "id": "hhZ4uQt9Xio4",
-        "outputId": "a9be3e0c-e716-4019-bd40-55a43012b787"
+        "outputId": "2b044f15-d743-49ec-cdde-ed7562f93845"
       },
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Страницы', 'Фундамент', 'Переключатели передач', 'Седло', 'Материнская плата', 'SIM-карта', 'Камеры', 'Мышь', 'Педали', 'Микрофон', 'Оперативная память', 'Динамики', 'Тормоза', 'Сантехника', 'Клавиатура', 'Видеокарта', 'Издательство', 'Иллюстрации', 'Рама', 'Автор', 'Оперативная память', 'Крыша', 'Текст', 'Аккумулятор', 'Экран', 'Процессор', 'Обложка', 'Название', 'Руль', 'Жесткий диск/SSD', 'Колеса', 'Окна', 'Цепь', 'Двери', 'Стены', 'Пол', 'Корпус', 'Потолок', 'Электрика', 'Монитор', 'Переплет', 'Процессор']\n"
+            "['Оперативная память', 'Двери', 'Процессор', 'Руль', 'Цепь', 'Текст', 'Стены', 'Окна', 'Переплет', 'Компьютерная мышь', 'Жесткий диск/SSD', 'Страницы', 'Педали', 'Название', 'Издательство', 'Тормоза', 'Сантехника', 'Иллюстрации', 'Потолок', 'Обложка', 'Крыша', 'Клавиатура', 'Видеокарта', 'Переключатели передач', 'Автор', 'Электрика', 'Фундамент', 'Материнская плата', 'Пол', 'Колеса', 'Седло', 'Монитор', 'Рама']\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"{'Компьютер': [4, 10, 11, 13, 14, 15, 25, 26, 30, 31, 38, 39, 42], 'Велосипед': [3, 8, 9, 18, 31], 'Мобильный телефон': [5, 6, 7, 11, 24, 25, 30], 'Книга': [0, 16, 17, 23, 27, 28, 29, 41], 'Дом': [1, 13, 21, 22, 32, 33, 34, 35, 36, 37, 39]} \\n\""
+              "\"```python\\n{'Компьютер': [0, 2, 9, 10, 22, 23, 31, 32], 'Велосипед': [3, 4, 12, 15, 30, 33, 34], 'Книга': [5, 8, 11, 13, 14, 17, 19, 20], 'Дом': [1, 6, 7, 16, 18, 21, 26, 27, 28, 29]}\\n```\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 13
         }
       ]
     },
@@ -247,7 +237,7 @@
       "metadata": {
         "id": "pPPYRbnlErKc"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     }
   ]
