--- a/ai_find_data.ipynb
+++ b/ai_find_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoO0wWSwUG5RHSQFwqdJ8p",
+      "authorship_tag": "ABX9TyOSHrKwBkT/UoRzkWufzZe6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "19GvzKAk1x_7"
       },
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "dNrha2nf3DEJ"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "2JXofPWR3GQS"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,23 +122,23 @@
         "\n",
         "\n",
         "print(groups)\n",
-        "print(details)"
+        "print(list(enumerate(details)))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1bblLBNf3JLW",
-        "outputId": "fb9213a6-3c33-43e0-fabb-d266747e2760"
+        "outputId": "f80f2080-03d5-43e2-e147-2117d82868f2"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['Компьютер', 'Велосипед', 'Книга', 'Дом']\n",
-            "['Процессор', 'Материнская плата', 'Оперативная память', 'Жесткий диск/SSD', 'Видеокарта', 'Монитор', 'Клавиатура', 'Компьютерная мышь', 'Рама', 'Руль', 'Седло', 'Колеса', 'Педали', 'Переключатели передач', 'Тормоза', 'Цепь', 'Обложка', 'Страницы', 'Переплет', 'Текст', 'Иллюстрации', 'Автор', 'Название', 'Издательство', 'Фундамент', 'Стены', 'Крыша', 'Окна', 'Двери', 'Пол', 'Потолок', 'Электрика', 'Сантехника']\n"
+            "[(0, 'Процессор'), (1, 'Материнская плата'), (2, 'Оперативная память'), (3, 'Жесткий диск/SSD'), (4, 'Видеокарта'), (5, 'Монитор'), (6, 'Клавиатура'), (7, 'Компьютерная мышь'), (8, 'Рама'), (9, 'Руль'), (10, 'Седло'), (11, 'Колеса'), (12, 'Педали'), (13, 'Переключатели передач'), (14, 'Тормоза'), (15, 'Цепь'), (16, 'Обложка'), (17, 'Страницы'), (18, 'Переплет'), (19, 'Текст'), (20, 'Иллюстрации'), (21, 'Автор'), (22, 'Название'), (23, 'Издательство'), (24, 'Фундамент'), (25, 'Стены'), (26, 'Крыша'), (27, 'Окна'), (28, 'Двери'), (29, 'Пол'), (30, 'Потолок'), (31, 'Электрика'), (32, 'Сантехника')]\n"
           ]
         }
       ]
@@ -156,36 +156,36 @@
       "metadata": {
         "id": "4OG67XO07ws-"
       },
-      "execution_count": 11,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "send_data(f'Дан список с уникальными деталями: {details}. Найди в данном списке индексы уникальных деталей, относящихся к каждой группе из списка групп {groups}. Ответ напиши в виде словаря с ключом в виде группы и значением в виде списка деталей, относящихся к группе. Напиши только результат в виде словаря без комментариев. ')"
+        "send_data(f'Дан пронумерованный список с уникальными деталями: {list(enumerate(details))}. Найди в данном списке индексы уникальных деталей, относящихся к каждой группе из списка групп {groups}. Ответ напиши в виде словаря с ключом в виде группы и значением в виде списка деталей, относящихся к группе. Напиши только результат в виде словаря без комментариев. ')"
       ],
       "metadata": {
         "id": "3cA4fXdL-uD1",
-        "outputId": "d755e14e-b60e-4473-c256-6a1a5b131ddf",
+        "outputId": "64ecc55f-94ae-49cb-f0e0-5ca850371e36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
         }
       },
-      "execution_count": 12,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"```python\\n{'Компьютер': [0, 1, 2, 3, 4, 5, 6, 7], 'Велосипед': [8, 9, 10, 11, 12, 13, 14, 15], 'Книга': [16, 17, 18, 19, 20, 21, 22, 23], 'Дом': [24, 25, 26, 27, 28, 29, 30, 31, 32]}\\n```\""
+              "\"{'Компьютер': [0, 1, 2, 3, 4, 5, 6, 7], 'Велосипед': [8, 9, 10, 11, 12, 13, 14, 15], 'Книга': [16, 17, 18, 19, 20, 21, 22, 23], 'Дом': [24, 25, 26, 27, 28, 29, 30, 31, 32]} \\n\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 21
         }
       ]
     },
@@ -195,7 +195,7 @@
         "import random\n",
         "random.shuffle(details)\n",
         "print(details)\n",
-        "send_data(f'Дан список с уникальными деталями: {details}. Найди в данном списке индексы уникальных деталей, относящихся к каждой группе из списка групп {groups}. Ответ напиши в виде словаря с ключом в виде группы и значением в виде списка деталей, относящихся к группе. Напиши только результат в виде словаря без комментариев. ')"
+        "send_data(f'Дан пронумерованный список с уникальными деталями: {list(enumerate(details))}. Найди в данном списке индексы уникальных деталей, относящихся к каждой группе из списка групп {groups}. Ответ напиши в виде словаря с ключом в виде группы и значением в виде списка деталей, относящихся к группе. Напиши только результат в виде словаря без комментариев. ')"
       ],
       "metadata": {
         "colab": {
@@ -203,29 +203,29 @@
           "height": 160
         },
         "id": "hhZ4uQt9Xio4",
-        "outputId": "2b044f15-d743-49ec-cdde-ed7562f93845"
+        "outputId": "5dfdd993-18e3-406b-be99-e5f80b497829"
       },
-      "execution_count": 13,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Оперативная память', 'Двери', 'Процессор', 'Руль', 'Цепь', 'Текст', 'Стены', 'Окна', 'Переплет', 'Компьютерная мышь', 'Жесткий диск/SSD', 'Страницы', 'Педали', 'Название', 'Издательство', 'Тормоза', 'Сантехника', 'Иллюстрации', 'Потолок', 'Обложка', 'Крыша', 'Клавиатура', 'Видеокарта', 'Переключатели передач', 'Автор', 'Электрика', 'Фундамент', 'Материнская плата', 'Пол', 'Колеса', 'Седло', 'Монитор', 'Рама']\n"
+            "['Процессор', 'Крыша', 'Страницы', 'Переплет', 'Педали', 'Жесткий диск/SSD', 'Иллюстрации', 'Обложка', 'Текст', 'Цепь', 'Руль', 'Переключатели передач', 'Рама', 'Клавиатура', 'Окна', 'Материнская плата', 'Видеокарта', 'Тормоза', 'Двери', 'Сантехника', 'Стены', 'Название', 'Автор', 'Монитор', 'Электрика', 'Пол', 'Компьютерная мышь', 'Потолок', 'Оперативная память', 'Издательство', 'Колеса', 'Седло', 'Фундамент']\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"```python\\n{'Компьютер': [0, 2, 9, 10, 22, 23, 31, 32], 'Велосипед': [3, 4, 12, 15, 30, 33, 34], 'Книга': [5, 8, 11, 13, 14, 17, 19, 20], 'Дом': [1, 6, 7, 16, 18, 21, 26, 27, 28, 29]}\\n```\""
+              "\"{'Компьютер': [0, 5, 13, 15, 16, 23, 26, 28], 'Велосипед': [4, 9, 10, 11, 12, 17, 30, 31], 'Книга': [2, 3, 6, 7, 8, 21, 22, 29], 'Дом': [1, 14, 18, 19, 20, 24, 25, 27, 32]}\\n\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 22
         }
       ]
     },
