--- a/ai_find_data.ipynb
+++ b/ai_find_data.ipynb
@@ -203,29 +203,29 @@
           "height": 160
         },
         "id": "hhZ4uQt9Xio4",
-        "outputId": "5dfdd993-18e3-406b-be99-e5f80b497829"
+        "outputId": "fa505064-b3cb-424d-917b-28ba40800a15"
       },
-      "execution_count": 22,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Процессор', 'Крыша', 'Страницы', 'Переплет', 'Педали', 'Жесткий диск/SSD', 'Иллюстрации', 'Обложка', 'Текст', 'Цепь', 'Руль', 'Переключатели передач', 'Рама', 'Клавиатура', 'Окна', 'Материнская плата', 'Видеокарта', 'Тормоза', 'Двери', 'Сантехника', 'Стены', 'Название', 'Автор', 'Монитор', 'Электрика', 'Пол', 'Компьютерная мышь', 'Потолок', 'Оперативная память', 'Издательство', 'Колеса', 'Седло', 'Фундамент']\n"
+            "['Потолок', 'Жесткий диск/SSD', 'Обложка', 'Издательство', 'Фундамент', 'Страницы', 'Крыша', 'Двери', 'Колеса', 'Автор', 'Тормоза', 'Электрика', 'Цепь', 'Оперативная память', 'Переплет', 'Руль', 'Педали', 'Видеокарта', 'Окна', 'Иллюстрации', 'Текст', 'Материнская плата', 'Название', 'Компьютерная мышь', 'Седло', 'Рама', 'Клавиатура', 'Пол', 'Монитор', 'Сантехника', 'Стены', 'Процессор', 'Переключатели передач']\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"{'Компьютер': [0, 5, 13, 15, 16, 23, 26, 28], 'Велосипед': [4, 9, 10, 11, 12, 17, 30, 31], 'Книга': [2, 3, 6, 7, 8, 21, 22, 29], 'Дом': [1, 14, 18, 19, 20, 24, 25, 27, 32]}\\n\""
+              "\"{'Компьютер': [1, 11, 13, 17, 21, 23, 26, 28, 31], 'Велосипед': [8, 10, 12, 15, 16, 24, 25], 'Книга': [2, 3, 5, 9, 14, 19, 20, 22], 'Дом': [0, 4, 6, 7, 18, 27, 29, 30]} \\n\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 24
         }
       ]
     },
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "pPPYRbnlErKc"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     }
   ]
