--- a/ai_find_data.ipynb
+++ b/ai_find_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSHrKwBkT/UoRzkWufzZe6",
+      "authorship_tag": "ABX9TyMvnGzx+GzR1qEo/o7DHidZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,19 +92,16 @@
         "  \"Видеокарта\",\n",
         "  \"Монитор\",\n",
         "  \"Клавиатура\",\n",
-        "  \"Компьютерная мышь\",\n",
         "  \"Рама\",\n",
         "  \"Руль\",\n",
         "  \"Седло\",\n",
         "  \"Колеса\",\n",
         "  \"Педали\",\n",
-        "  \"Переключатели передач\",\n",
         "  \"Тормоза\",\n",
         "  \"Цепь\",\n",
         "  \"Обложка\",\n",
         "  \"Страницы\",\n",
         "  \"Переплет\",\n",
-        "  \"Текст\",\n",
         "  \"Иллюстрации\",\n",
         "  \"Автор\",\n",
         "  \"Название\",\n",
@@ -116,7 +113,6 @@
         "  \"Двери\",\n",
         "  \"Пол\",\n",
         "  \"Потолок\",\n",
-        "  \"Электрика\",\n",
         "  \"Сантехника\"\n",
         "]\n",
         "\n",
@@ -129,16 +125,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1bblLBNf3JLW",
-        "outputId": "f80f2080-03d5-43e2-e147-2117d82868f2"
+        "outputId": "2483fe91-cf93-4cab-ad0c-a89c162fe059"
       },
-      "execution_count": 15,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['Компьютер', 'Велосипед', 'Книга', 'Дом']\n",
-            "[(0, 'Процессор'), (1, 'Материнская плата'), (2, 'Оперативная память'), (3, 'Жесткий диск/SSD'), (4, 'Видеокарта'), (5, 'Монитор'), (6, 'Клавиатура'), (7, 'Компьютерная мышь'), (8, 'Рама'), (9, 'Руль'), (10, 'Седло'), (11, 'Колеса'), (12, 'Педали'), (13, 'Переключатели передач'), (14, 'Тормоза'), (15, 'Цепь'), (16, 'Обложка'), (17, 'Страницы'), (18, 'Переплет'), (19, 'Текст'), (20, 'Иллюстрации'), (21, 'Автор'), (22, 'Название'), (23, 'Издательство'), (24, 'Фундамент'), (25, 'Стены'), (26, 'Крыша'), (27, 'Окна'), (28, 'Двери'), (29, 'Пол'), (30, 'Потолок'), (31, 'Электрика'), (32, 'Сантехника')]\n"
+            "[(0, 'Процессор'), (1, 'Материнская плата'), (2, 'Оперативная память'), (3, 'Жесткий диск/SSD'), (4, 'Видеокарта'), (5, 'Монитор'), (6, 'Клавиатура'), (7, 'Рама'), (8, 'Руль'), (9, 'Седло'), (10, 'Колеса'), (11, 'Педали'), (12, 'Тормоза'), (13, 'Цепь'), (14, 'Обложка'), (15, 'Страницы'), (16, 'Переплет'), (17, 'Иллюстрации'), (18, 'Автор'), (19, 'Название'), (20, 'Издательство'), (21, 'Фундамент'), (22, 'Стены'), (23, 'Крыша'), (24, 'Окна'), (25, 'Двери'), (26, 'Пол'), (27, 'Потолок'), (28, 'Сантехника')]\n"
           ]
         }
       ]
@@ -156,7 +152,7 @@
       "metadata": {
         "id": "4OG67XO07ws-"
       },
-      "execution_count": 20,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -166,26 +162,26 @@
       ],
       "metadata": {
         "id": "3cA4fXdL-uD1",
-        "outputId": "64ecc55f-94ae-49cb-f0e0-5ca850371e36",
+        "outputId": "c1fda9e1-8635-463c-e12d-49ccbc5dd0bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
         }
       },
-      "execution_count": 21,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"{'Компьютер': [0, 1, 2, 3, 4, 5, 6, 7], 'Велосипед': [8, 9, 10, 11, 12, 13, 14, 15], 'Книга': [16, 17, 18, 19, 20, 21, 22, 23], 'Дом': [24, 25, 26, 27, 28, 29, 30, 31, 32]} \\n\""
+              "\"{'Компьютер': [0, 1, 2, 3, 4, 5, 6], 'Велосипед': [7, 8, 9, 10, 11, 12, 13], 'Книга': [14, 15, 16, 17, 18, 19, 20], 'Дом': [21, 22, 23, 24, 25, 26, 27, 28]} \\n\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 30
         }
       ]
     },
@@ -203,29 +199,29 @@
           "height": 160
         },
         "id": "hhZ4uQt9Xio4",
-        "outputId": "fa505064-b3cb-424d-917b-28ba40800a15"
+        "outputId": "9d7c940c-c914-4a8c-b5bd-5dc2ffbe298f"
       },
-      "execution_count": 24,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Потолок', 'Жесткий диск/SSD', 'Обложка', 'Издательство', 'Фундамент', 'Страницы', 'Крыша', 'Двери', 'Колеса', 'Автор', 'Тормоза', 'Электрика', 'Цепь', 'Оперативная память', 'Переплет', 'Руль', 'Педали', 'Видеокарта', 'Окна', 'Иллюстрации', 'Текст', 'Материнская плата', 'Название', 'Компьютерная мышь', 'Седло', 'Рама', 'Клавиатура', 'Пол', 'Монитор', 'Сантехника', 'Стены', 'Процессор', 'Переключатели передач']\n"
+            "['Стены', 'Клавиатура', 'Издательство', 'Оперативная память', 'Страницы', 'Педали', 'Седло', 'Крыша', 'Рама', 'Колеса', 'Монитор', 'Иллюстрации', 'Тормоза', 'Потолок', 'Переплет', 'Автор', 'Процессор', 'Название', 'Окна', 'Обложка', 'Руль', 'Цепь', 'Видеокарта', 'Фундамент', 'Материнская плата', 'Двери', 'Сантехника', 'Жесткий диск/SSD', 'Пол']\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"{'Компьютер': [1, 11, 13, 17, 21, 23, 26, 28, 31], 'Велосипед': [8, 10, 12, 15, 16, 24, 25], 'Книга': [2, 3, 5, 9, 14, 19, 20, 22], 'Дом': [0, 4, 6, 7, 18, 27, 29, 30]} \\n\""
+              "\"{'Компьютер': [1, 3, 10, 16, 22, 24, 27], 'Велосипед': [5, 6, 8, 9, 12, 20, 21], 'Книга': [2, 4, 11, 14, 15, 17, 19], 'Дом': [0, 7, 13, 18, 23, 25, 26, 28]} \\n\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 32
         }
       ]
     },
@@ -237,7 +233,7 @@
       "metadata": {
         "id": "pPPYRbnlErKc"
       },
-      "execution_count": 23,
+      "execution_count": 31,
       "outputs": []
     }
   ]
