--- a/ai_credentials.ipynb
+++ b/ai_credentials.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOairgzfB8hC7gNYByNA1q",
+      "authorship_tag": "ABX9TyNHWZzF31upYk3/tp1oblrP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,172 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "from google.colab import userdata\n",
+        "\n",
+        "os.environ['GOOGLE_API_KEY'] = userdata.get('GOOGLE_API_KEY')"
+      ],
+      "metadata": {
+        "id": "NWlSlV9Lcaf5"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "curl https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=$GOOGLE_API_KEY \\\n",
+        "    -H 'Content-Type: application/json' \\\n",
+        "    -X POST \\\n",
+        "    -d '{\n",
+        "      \"contents\": [{\n",
+        "        \"parts\":[{\n",
+        "          \"text\": \"Hi\"}]}]}' 2> /dev/null"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Irz-kTeNdcHP",
+        "outputId": "bbc31e45-3910-4bd1-eb25-a28585bc1dfe"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"candidates\": [\n",
+            "    {\n",
+            "      \"content\": {\n",
+            "        \"parts\": [\n",
+            "          {\n",
+            "            \"text\": \"Greetings! How may I assist you today?\"\n",
+            "          }\n",
+            "        ],\n",
+            "        \"role\": \"model\"\n",
+            "      },\n",
+            "      \"finishReason\": \"STOP\",\n",
+            "      \"index\": 0,\n",
+            "      \"safetyRatings\": [\n",
+            "        {\n",
+            "          \"category\": \"HARM_CATEGORY_SEXUALLY_EXPLICIT\",\n",
+            "          \"probability\": \"NEGLIGIBLE\"\n",
+            "        },\n",
+            "        {\n",
+            "          \"category\": \"HARM_CATEGORY_HATE_SPEECH\",\n",
+            "          \"probability\": \"NEGLIGIBLE\"\n",
+            "        },\n",
+            "        {\n",
+            "          \"category\": \"HARM_CATEGORY_HARASSMENT\",\n",
+            "          \"probability\": \"NEGLIGIBLE\"\n",
+            "        },\n",
+            "        {\n",
+            "          \"category\": \"HARM_CATEGORY_DANGEROUS_CONTENT\",\n",
+            "          \"probability\": \"NEGLIGIBLE\"\n",
+            "        }\n",
+            "      ]\n",
+            "    }\n",
+            "  ],\n",
+            "  \"usageMetadata\": {\n",
+            "    \"promptTokenCount\": 1,\n",
+            "    \"candidatesTokenCount\": 9,\n",
+            "    \"totalTokenCount\": 10\n",
+            "  }\n",
+            "}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!curl -o image.jpg https://storage.googleapis.com/generativeai-downloads/images/scones.jpg"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HIPRDDFQebpL",
+        "outputId": "8fdc5b42-a184-4240-83ca-8f4df94c313d"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "100  385k  100  385k    0     0  1877k      0 --:--:-- --:--:-- --:--:-- 1880k\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "echo '{\n",
+        "  \"contents\":[\n",
+        "    {\n",
+        "      \"parts\":[\n",
+        "        {\"text\": \"Descripe the picture\"},\n",
+        "        {\n",
+        "          \"inline_data\": {\n",
+        "            \"mime_type\":\"image/jpeg\",\n",
+        "            \"data\": \"'$(base64 -w0 image.jpg)'\"\n",
+        "          }\n",
+        "        }\n",
+        "      ]\n",
+        "    }\n",
+        "  ]\n",
+        "}' > request.json"
+      ],
+      "metadata": {
+        "id": "XXQPNpZlef0p"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "curl https://generativelanguage.googleapis.com/v1beta/models/gemini-pro-vision:generateContent?key=${GOOGLE_API_KEY} \\\n",
+        "        -H 'Content-Type: application/json' \\\n",
+        "        -d @request.json 2> /dev/null | grep \"text\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UvDm7Q26ekXM",
+        "outputId": "7fb8b4be-eb18-4f2b-ae54-fd56cfd7a20d"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "            \"text\": \" The picture shows a white plate with three scones. The scones are made with blueberries and have a crumbly texture. There is also a bowl of blueberries and two cups of coffee on the table. The table is decorated with pink flowers and green leaves. There is also a silver spoon on the table. The background is a light blue color.\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# https://console.cloud.google.com/apis/credentials\n",
         "# create a new key in json format, upload a json file here"
       ],
       "metadata": {
         "id": "J8m95ZxBxa2M"
       },
-      "execution_count": 1,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -65,26 +224,26 @@
       ],
       "metadata": {
         "id": "_IqP4I0dfL5u",
-        "outputId": "f61aa5e2-0cdf-4975-ac0b-6700c7c03426",
+        "outputId": "3e8ed202-a797-45ed-8f2e-9cd993450663",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": 3,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"Hello! 👋 It's nice to meet you. 😊\\n\\nWhat would you like to talk about today? 🤔\""
+              "'Hi! How can I help you today?'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 19
         }
       ]
     },
@@ -95,12 +254,12 @@
       ],
       "metadata": {
         "id": "F6b4r9asDvhP",
-        "outputId": "15ccd1c0-ffa5-446b-e9ba-91ca666d63ca",
+        "outputId": "fb5e75fa-cfc5-45d1-826a-23154719d722",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +271,7 @@
             "}\n",
             ", role: \"model\"\n",
             "parts {\n",
-            "  text: \"Hello! \\360\\237\\221\\213 It\\'s nice to meet you. \\360\\237\\230\\212\\n\\nWhat would you like to talk about today? \\360\\237\\244\\224\"\n",
+            "  text: \"Hi! How can I help you today?\"\n",
             "}\n",
             "]\n"
           ]
