--- a/rbf_test.ipynb
+++ b/rbf_test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8ZWKrRIfe/E0n8YkHoTOn",
+      "authorship_tag": "ABX9TyPsv4wB++clU9SmmipTvwuM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 405
         },
         "id": "-Odo-H_QK3XN",
-        "outputId": "41e83168-580d-4779-b165-5fe418def0e1"
+        "outputId": "4808a621-a83f-4aa5-b4bc-6d158f55d420"
       },
       "outputs": [
         {
@@ -147,9 +147,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VN9rYyuwNWze",
-        "outputId": "6ce3402d-1122-4cc4-a2fc-1f08c7e80d50"
+        "outputId": "b0ba5083-a13a-4696-8958-9e7fa62d71e7"
       },
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,33 +159,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "-np.linalg.norm(np.array([1,1]) - np.array([0,0]))**2 / 2 * 0.5**2"
+        "-np.linalg.norm(np.array([1,1]) - np.array([0,0]))**2 / (2 * 0.5**2)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EKGCS-rcQxXI",
-        "outputId": "ab6d3497-48a8-4d18-adf8-090992b839ea"
+        "outputId": "88b2744b-fc9b-4555-da23-1302ef6ba46b"
       },
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-0.25000000000000006"
+              "-4.000000000000001"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 12
         }
       ]
     },
@@ -199,9 +199,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "72Cv2kb9Qrcb",
-        "outputId": "8c445b39-6d3f-4849-fb91-2a8d101341af"
+        "outputId": "c304e26a-c478-45b3-c5d6-7e1ce985b94f"
       },
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +211,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 13
         }
       ]
     },
@@ -225,9 +225,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d6ybNzIiRRFT",
-        "outputId": "753ffc07-dfa4-4602-ee22-0c3fddcd0a0e"
+        "outputId": "4a060012-d3e5-4633-d8e3-803ec17d1142"
       },
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +237,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 14
         }
       ]
     },
@@ -257,9 +257,9 @@
           "height": 335
         },
         "id": "LAE0DMUoRfQG",
-        "outputId": "391a433a-a05b-46d0-e03f-9ab8e8324237"
+        "outputId": "fb4ab2d5-7a8f-456e-d443-605c5a3ba5d3"
       },
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -303,9 +303,9 @@
           "height": 335
         },
         "id": "_HFu_THPS1tl",
-        "outputId": "54a5088c-6a47-4b81-dccc-b423fecf29f6"
+        "outputId": "d1fe7073-37b4-49b6-dd9d-8367f8937589"
       },
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -350,9 +350,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K0quEGrZT67M",
-        "outputId": "1eb119ba-a605-4cfd-9f0a-a522e12c28c9"
+        "outputId": "febe4079-e4f3-4b4d-c1ba-f17b1b54f01d"
       },
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
