--- a/rbf_test.ipynb
+++ b/rbf_test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsv4wB++clU9SmmipTvwuM",
+      "authorship_tag": "ABX9TyPitMDnVH5pkqCRdb61xTCH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -149,7 +149,7 @@
         "id": "VN9rYyuwNWze",
         "outputId": "b0ba5083-a13a-4696-8958-9e7fa62d71e7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -175,7 +175,7 @@
         "id": "EKGCS-rcQxXI",
         "outputId": "88b2744b-fc9b-4555-da23-1302ef6ba46b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -201,7 +201,7 @@
         "id": "72Cv2kb9Qrcb",
         "outputId": "c304e26a-c478-45b3-c5d6-7e1ce985b94f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +227,7 @@
         "id": "d6ybNzIiRRFT",
         "outputId": "4a060012-d3e5-4633-d8e3-803ec17d1142"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,6 +238,84 @@
           },
           "metadata": {},
           "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.exp(-10)"
+      ],
+      "metadata": {
+        "id": "iQ23qtdmitOZ",
+        "outputId": "c2ff828e-7531-46a0-e46c-aca58daf72b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.5399929762484854e-05"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.exp(-1)"
+      ],
+      "metadata": {
+        "id": "oFlAIXOEisH7",
+        "outputId": "804c2bcf-1ae4-4240-8131-179664830640",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.36787944117144233"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.exp(-0.01)"
+      ],
+      "metadata": {
+        "id": "FFPw139fi1m1",
+        "outputId": "7a54adbe-4120-4ffc-94cb-e6b3024a91f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9900498337491681"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     },
@@ -259,7 +337,7 @@
         "id": "LAE0DMUoRfQG",
         "outputId": "fb4ab2d5-7a8f-456e-d443-605c5a3ba5d3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -305,7 +383,7 @@
         "id": "_HFu_THPS1tl",
         "outputId": "d1fe7073-37b4-49b6-dd9d-8367f8937589"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -352,7 +430,7 @@
         "id": "K0quEGrZT67M",
         "outputId": "febe4079-e4f3-4b4d-c1ba-f17b1b54f01d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
