--- a/rbf_simple.ipynb
+++ b/rbf_simple.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrVv7p8zPnYCGY/RTFBeg0",
+      "authorship_tag": "ABX9TyN/yMd5mZ7wiK6bQs6JPTja",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eVlP_cmr1fdO",
+        "outputId": "51309329-c6aa-430b-a1cf-063a7361f77c"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.31 0.31]\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -50,26 +67,9 @@
         "\n",
         "def predict(data):\n",
         "    func_data = np.array([func(data, x) for x in X])\n",
-        "    return np.dot(func_data, c)\n",
+        "    return func_data @ c\n",
         "\n",
         "print(predict([0.4, 0.5, 0.2]))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Sh8guukD0A5z",
-        "outputId": "1f729b12-2098-49dd-8877-cb9c6923face"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0.31 0.31]\n"
-          ]
-        }
       ]
     }
   ]
