--- a/rbf_simple.ipynb
+++ b/rbf_simple.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/yMd5mZ7wiK6bQs6JPTja",
+      "authorship_tag": "ABX9TyOEqHsnugJjajgHigD75YXx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eVlP_cmr1fdO",
-        "outputId": "51309329-c6aa-430b-a1cf-063a7361f77c"
+        "outputId": "2367b54c-acf0-40da-8e2e-8c363a27b08f"
       },
       "outputs": [
         {
@@ -48,13 +48,13 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "X = np.array([[0.1, 0.2, 0.3], [0.3, 0.4, 0.5], [0.5, 0.6, 0.6], [0.8, 0.9, 0.7], [0.4, 0.5, 0.2]])\n",
+        "X = np.array([[0, 1, 0], [0.3, 0.4, 0.5], [0.5, 0.6, 0.6], [0.8, 0.9, 0.7], [0.4, 0.5, 0.2]])\n",
         "y = np.array([[0.15, 0.15], [0.35, 0.35], [0.55, 0.55], [0.85, 0.85], [0.31, 0.31]])\n",
         "\n",
         "m = len(X)\n",
         "\n",
         "def func(data, x):\n",
-        "    return np.exp(-np.linalg.norm(data - x)**2)\n",
+        "    return np.exp(sum(data - x)**2)\n",
         "\n",
         "def train(X, y):\n",
         "    matrix = np.zeros((m, m))\n",
