--- a/kivy_test.ipynb
+++ b/kivy_test.ipynb
@@ -20,22 +20,7 @@
       "source": [
         "!sudo apt update\n",
         "!sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev\n",
-        "!pip3 install --user --upgrade Cython==0.29.33 virtualenv"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "d-sEuwgXERB-"
-      },
-      "outputs": [],
-      "source": [
-        "!git clone https://github.com/kivy/buildozer\n",
-        "%cd buildozer\n",
-        "!python setup.py build\n",
-        "!pip install -e .\n",
-        "%cd .."
+        "!pip3 install --user --upgrade Cython==0.29.33 virtualenv buildozer"
       ]
     },
     {
@@ -43,7 +28,9 @@
       "source": [
         "!ssh-keygen -t rsa -b 4096 -f ~/.ssh/id_rsa -N ''\n",
         "!ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts\n",
-        "!cat ~/.ssh/id_rsa.pub > key.txt"
+        "!cat ~/.ssh/id_rsa.pub > key.txt\n",
+        "from IPython.display import clear_output\n",
+        "clear_output()"
       ],
       "metadata": {
         "id": "fLXhgNv2HPwH"
@@ -61,9 +48,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8djaEODhHmwR",
-        "outputId": "8ccb4390-f83c-445d-8528-ab89b4d56c24"
+        "outputId": "5aa96e6c-08fb-43cb-c05e-fd069ab9bc57"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,9 +71,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "10aac015-ff90-4756-b84b-f21b636318f3"
+        "outputId": "402f2d1c-c9fa-4941-9b74-dbaf652c1066"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,9 +100,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e6c44986-c0bb-4b48-e9db-037634875ad1"
+        "outputId": "075b3af7-47a2-46d5-e911-6fbc3400debd"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,30 +131,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
-        "id": "2bBaY_EOGFYu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "61cb726a-4905-4808-daac-afb8255fe8e8"
+        "id": "2bBaY_EOGFYu"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[91m\u001b[1mBuildozer is running as root!\u001b[0m\n",
-            "\u001b[91mThis is \u001b[1mnot\u001b[0m \u001b[91mrecommended, and may lead to problems later.\u001b[0m\n",
-            "Are you sure you want to continue [y/n]? y\n",
-            "\u001b[0m\u001b[1;30m# Copy /content/buildozer/buildozer/default.spec to buildozer.spec\u001b[0m\n",
-            "File buildozer.spec created, ready to customize!\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "# оставить только main.py клиентского приложения, остальные файлы удалить\n",
+        "\n",
         "# для создания нового buildozer.spec файла\n",
-        "!buildozer init"
+        "!buildozer init\n",
+        "\n",
+        "# раскоментировать строчку в buildozer.spec\n",
+        "#android.permissions = android.permission.INTERNET, (name=android.permission.WRITE_EXTERNAL_STORAGE;maxSdkVersion=18)"
       ]
     },
     {
